<resources>
    <string name="app_name">omdbapi</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="movies_fragment_label">Movies Fragment</string>
    <string name="movie_fragment_label">Movie Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="movies">Movies</string>
    <string name="empty_screen">OOPS NOTHINGS IS HERE.\nSET THE SEARCH PARAMETERS</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="quantity">Quantity</string>
    <string name="apply">Apply</string>
    <string name="comments">COMMENTS</string>
    <string name="write_comment">Write your comment</string>
    <string name="leave_comment">Leave comment</string>
    <string name="comment_added">Comment added</string>
    <string name="comment_deleted">Comment deleted</string>
    <string name="imdb">IMDb</string>
    <string name="poster">poster</string>
    <string name="like">like</string>
    <string name="error_network_connection">Network Error. Please check your internet connection and try again.</string>
    <string name="error_fill_search_field">Please fill search field</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>