<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/app_toolbar"
            layout="@layout/toolbar_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_rounded"
            android:paddingHorizontal="16dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_toolbar">

            <ImageView
                android:id="@+id/image_poster"
                android:layout_width="120dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                app:layout_constraintDimensionRatio="2:3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/sherlock" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_poster"
                app:layout_constraintTop_toTopOf="@+id/image_poster"
                tools:text="Sherlock Holmes: A game of thrones" />

            <TextView
                android:id="@+id/text_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black40"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_poster"
                app:layout_constraintTop_toBottomOf="@+id/text_title"
                tools:text="2017" />

            <TextView
                android:id="@+id/text_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black40"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_poster"
                app:layout_constraintTop_toBottomOf="@+id/text_year"
                tools:text="Movie" />

            <tj.test.omdbapi.presentation.CommentView
                android:id="@+id/view_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_poster"
                app:layout_constraintTop_toBottomOf="@+id/text_type" />

            <ImageView
                android:id="@+id/image_like"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/view_comment"
                app:layout_constraintStart_toEndOf="@+id/view_comment"
                app:layout_constraintTop_toTopOf="@+id/view_comment"
                app:srcCompat="@drawable/ic_dislike" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/text_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/comments"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parent_layout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/bg_rounded"
            android:paddingHorizontal="16dp"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_comments">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="3"
                tools:listitem="@layout/item_comment" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lines="5"
                android:background="@drawable/bg_back_border"
                android:gravity="top"
                android:hint="@string/write_comment"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_comments" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_leave_comment"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:text="@string/leave_comment"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="@color/purple_700"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_comment" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
